infra/k8s/system/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clouddeploy-frontend
  namespace: clouddeploy-system
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: clouddeploy-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: clouddeploy-system
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: frontend
